## Process this file with automake to produce Makefile.in

EXTRA_DIST = uqCovCond.h \
	uqDefaultPrior.h \
	uqMarkovChainPositionData.h \
	uqMarkovChainSG1.h \
	uqMarkovChainSG2.h \
	uqModelValidation.h \
	uqMonteCarloSG.h \
	uqScalarCdf.h \
	uqScalarRV.h \
	uqStatisticalForwardProblem.h \
	uqStatisticalInverseProblem.h \
	uqTKGroup.h \
	uqValidationCycle.h \
	uqVectorCdf.h \
	uqVectorMdf.h \
	uqVectorPdf.h \
	uqVectorRealizer.h \
	uqVectorRV.h 
